Different color tags, fixed alignment issue, minor tweaks to "Learn More" button

--- a/src/components/project.css
+++ b/src/components/project.css
@@ -9,7 +9,7 @@
   align-items: flex-start;
 }
 .project-max-width {
-  gap: var(--dl-space-space-twounits);
+  gap: var(--dl-space-space-unit);
   display: flex;
   align-items: flex-start;
 }
@@ -35,6 +35,7 @@
   flex-direction: column;
 }
 .project-container2 {
+  gap: var(--dl-space-space-halfunit);
   display: flex;
   align-items: flex-start;
   flex-direction: row;
@@ -74,9 +75,6 @@
 .project-text17 {
   display: inline-block;
 }
-.project-text18 {
-  display: inline-block;
-}
 .project-text19 {
   display: inline-block;
 }
@@ -91,7 +89,14 @@
 .project-text22 {
   display: inline-block;
 }
-.project-text23 {
+.project-swe {
+  background-color: var(--dl-color-theme-accent1);
+  border-color: var(--dl-color-theme-accent1);
+  display: inline-block;
+}
+.project-gd {
+  background-color: var(--dl-color-theme-accent3);
+  border-color: var(--dl-color-theme-accent3);
   display: inline-block;
 }
 
